<resources>
    <string name="app_name">AppListaCurso</string>
    <string name="aplicativo_lista_vip">Aplicativo Lista Vip</string>
    <string name="primeiro_nome">Primeiro Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="nome_do_curso">Nome do curso</string>
    <string name="telefone_de_contato">Telefone de Contato</string>
    <string name="limpar">LIMPAR</string>
    <string name="salvar">SALVAR</string>
    <string name="finalizar">FINALIZAR</string>
</resources>